Bug 90582 - Zoom operations are not working correctly for VNC guests if window is resized
Summary: Zoom operations are not working correctly for VNC guests if window is resized
Status: RESOLVED FIXED
Alias: None
Product: Spice
Classification: Unclassified
Component: virt-viewer (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Pavel Grunt
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-22 07:36 UTC by Pavel Grunt
Modified: 2015-07-29 15:20 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Pavel Grunt 2015-05-22 07:36:22 UTC
All zoom reset / out / in behaves differently than expected if the initial size of the window is changed.

Zoom reset:
1. change size of the window by dragging a corner
2. reset zoom (View -> Zoom -> Normal Size)

Actual result:
nothing happens

Expected result:
the window is not zoomed (it should have the "Normal Size")

Zoom out:
1. decrease size of the window by dragging a corner
2. zoom out (View -> Zoom -> Zoom Out)

Actual result:
the window is zoomed in

Expected result:
the window is zoomed out

Zoom in:
1. increase size of the window by dragging a corner
2. zoom in (View -> Zoom -> Zoom In)

Actual result:
the window is zoomed out

Expected result:
the window is zoomed in


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.