virt-viewer-window: Change zoom with respect to real zoom

The zoom can be changed by resizing the window (VNC / Spice without
the agent). It is necessary to recalculate the zoom level before
changing it, otherwise zoom operations will not work correctly.

Resolves:
https://bugs.freedesktop.org/show_bug.cgi?id=90582